syntax = "proto3";

option java_package = "org.sample.proto";
option java_outer_classname = "TreeProto";
option java_multiple_files = true;

// TreeNode message with oneOf to represent the sealed interface
message TreeNodeProto {
  oneof node_type {
    InternalNodeProto internal_node = 1;
    LeafNodeProto leaf_node = 2;
  }
}

// Internal node representation
message InternalNodeProto {
  string name = 1;
  TreeNodeProto left = 2;
  TreeNodeProto right = 3;
}

// Leaf node representation
message LeafNodeProto {
  int32 value = 1;
}
